[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "killbills_sdk"
version = "0.0.1"
authors = [
    { name = "killbillsdev", email = "cto@killbills.co" }
]
description = "KillBills e-receipt sdk"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.26.0",
    "pydantic>=2.0.3",
    "pytest>=7.4.0"
]

[project.urls]
Homepage = "https://github.com/killbillsdev/killbills-sdk-python"
"Bug Tracker" = "https://github.com/killbillsdev/killbills-sdk-python/issues"

[dependencies]
python = ">=3.7"
requests = ">=2.26.0"
pydantic = ">=2.0.3"
hmac = "20101005"

